--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "nexmo": "^2.8.0",
     "nodemailer": "^6.4.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-recaptcha": "^2.3.10",
     "react-recaptcha-google": "^1.1.1",
+    "react-recaptcha-v3": "^2.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
