--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/mekaala/card-center-dalton#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "ini": "^2.0.0",
     "nodemailer": "^6.4.11"
   },
   "devDependencies": {
