--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/mekaala/card-center-dalton#readme",
   "dependencies": {
+    "aws-amplify": "^6.0.21",
     "axios": "^0.28.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
